2006-07-25  Marc Singer  <elf@cerise.buici.com>

	* src/lib/env.c (_env_locate): New environment implementation is
	self-contained for both reading and writing.

2006-07-25    <elf@scarlet.buici.com>

	* src/mach-ixp42x/debian-nslu2-arm_config: Moved the start of the
	kernel and ramdisk regions to skip the 16 byte sercomm header.

	* include/atag.h: Fixed atag section macros.

2006-07-23    <elf@scarlet.buici.com>

	* src/mach-ixp42x/cpuinfo.c (cpuinfo_report): Alignment change to
	the cpuinfo function.

	* include/driver.h: Added query function to the driver jump table.

	* src/drivers/drv-nor-cfi.c (nor_query): New query function allows
	a driver to return information about the device.  NOR flash is the
	only implementer because it's the one that needs this most.  
	(copy_from): Implementation of a byte swapping copy routine for
	the sake of BE/LE conversion.

	* src/drivers/drv-fis.c (prescan_directory): New directory prescan
	detemines if the flash directory has a different endian-ness from
	APEX.
	(map_region): New function to map the directory entry to a
	region.  Now, the region use the underlying flash driver.

	* src/apex/cmd-copy.c (cmd_copy): Added -s option to copy for byte
	swapping data where the source is a different ending from APEX.

2006-07-22    <elf@scarlet.buici.com>

	* src/drivers/drv-mem.c (memory_read): Checks the width field and
	performs IO accordingly.

	* src/apex/cmd-help.c: Revised command line help. 

	* include/driver.h: New descriptor field specifies the IO width.
	This allows, in particular, the memory driver to tailor the I/O to
	a specific width.  Some regions must be read as words (CPU
	registers), others as bytes (CF).

	* src/apex/cmd-dump.c (cmd_dump): Here, and elsewhere, added
	alignment attributes so that byte arrays on the stack are word
	aligned.  I had thought that this was a given but the 4.x
	compilers no longer make this true.
   
	* src/drivers/drv-nor-cfi.c (nor_report): Code to detect endian