@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 
-# Sun Jul 23 22:37:58 2006
+# Tue Jul 25 23:13:50 2006
 #
 CONFIG_ARM=y
 CONFIG_CPU_ARMV5=y
@@ -45,6 +45,7 @@ CONFIG_NOR_BANK0_START=0x50000000
 CONFIG_NOR_BANK0_LENGTH=0x00800000
 CONFIG_ENV_STARTUP=""
 CONFIG_MACH="ixp42x"
+CONFIG_RAMDISK_SIZE=0x00400000
 CONFIG_MACH_NSLU2=y
 # CONFIG_MACH_AVILA2347 is not set
 # CONFIG_USER_DEFAULTENDIAN is not set
