@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 
-# Sun Jul 23 22:38:16 2006
+# Tue Jul 25 23:13:51 2006
 #
 CONFIG_ARM=y
 CONFIG_CPU_ARMV4=y
