@@ -1,3 +1,14 @@
+2006-07-25  Marc Singer  <elf@buici.com>
+
+	* usr/printenv.cc: Rewritten printenv program to support the new
+	environment memory format.
+ 
+	* README_environment: New README about the environment.
+
+	* Makefile: Removed envmagic.h and it's computation.  The new
+	environment is free-standing and removal of envmagic makes the
+	build much quicker.
+ 
 2006-07-25  Marc Singer  <elf@cerise.buici.com>
 
 	* src/lib/env.c (_env_locate): New environment implementation is
